# storage-expert

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mcp_servers.example.json  pyproject.toml  system_prompt.md
.github/workflows/: ci.yml
deploy/: nginx.conf  storage-expert.service
docs/superpowers/plans/: 2026-07-01-web-chatbot.md
docs/superpowers/specs/: 2026-07-01-web-chatbot-design.md  2026-07-15-project-cleanup-design.md
storage_expert/: auth.py  chat.py  cli.py  config.py  ingest.py  mcp_client.py  prompts.py  providers.py  qa.py
tests/: test_smoke.py
web/: server.py
web/static/: index.html  login.html
