[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-expert"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.2",
    "langchain-groq>=0.2",
    "langchain-huggingface>=0.1",
    "langchain-chroma>=0.1",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "click>=8.1",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0,<5.0",
    "transformers>=4.40,<5.0",
    "numpy<2",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "itsdangerous>=2.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
    "langchain-mcp-adapters>=0.1",
    "langgraph>=0.2",
]

[project.scripts]
storage-expert = "storage_expert.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["storage_expert*"]
